gitops/manifests/server/statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: ocp-auth-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocp-auth-server
  template:
    metadata:
      labels:
        app: ocp-auth-server
    spec:
      serviceAccountName: ocp-auth-server-sa
      volumes:
        - name: broker-storage
          persistentVolumeClaim:
            claimName: ocp-auth-server
        - name: login-config
          secret:
            secretName: ocp-auth-server-login
        - name: log4j2-config
          valueFrom:
            configMapKeyRef:
              name: ocp-auth-server-log4j2
              key: log4j2.properties
      containers:
        - name: activemq-artemis
          image: 'registry.redhat.io/amq7/amq-broker-rhel8:7.11.7-4.1740580601'
          resources: {}
          volumeMounts:
            - name: broker-storage
              mountPath: /opt/amq/broker/data/
            - name: login-config
              mountPath: /opt/amq/conf/login.config
              subPath: login.config
            - name: log4j2-config
              mountPath: /opt/amq/conf/log4j2.properties
              subPath: log4j2.properties
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  serviceName: ocp-auth-server
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
