gitops/manifests/server/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ocp-auth-server
spec:
  to:
    kind: Service
    name: ocp-auth-server
    weight: 100
  port:
    targetPort: web-console
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
